# Capstone-Project

./: README.md
2 Axis Reflective Optical Mirror Stand/: README.MD  servo.ino
Camera Calibration/: README.MD  cameracal.m  reprojection.m
Project Reports/: README.MD
Serial Comm Raspi/: README.MD
Tracking/: README.MD
Tracking/HSV tracking/: CMakeLists.txt  objectTracking.cpp
Tracking/Moving Servos/: Tracker.h  main.cpp
Tracking/Moving Servos/Others/: updateServos.cpp
Tracking/Tracking/: CMakeLists.txt  README.txt  mySerial.cpp  updateServos.h
Wireless Comm/: README.MD
Wireless Comm/magick++/: README.MD  a.out  pix  pix.cpp  run.sh  start_camd.sh
Wireless Comm/onebyte/: README.MD
Wireless Comm/onebyte/rec/: rec2  rec2.cpp
Wireless Comm/onebyte/trans/: trans  trans.cpp
Wireless Comm/onepixel/: README.MD
Wireless Comm/onepixel/rec/: rec2  rec2.cpp
Wireless Comm/onepixel/trans/: trans  trans.cpp
Wireless Comm/squarewave/: README.MD
Wireless Comm/squarewave/rec/: rec2  rec2.cpp
Wireless Comm/squarewave/trans/: trans  trans.cpp
